rokovi/ppj_feb_2018/1/parser.output
Grammar

    0 $accept: program $end

    1 program: program naredba '\n'
    2        | naredba '\n'

    3 naredba: ID_T DODELA_T izraz
    4        | LID_T DODELA_T lista
    5        | izraz

    6 izraz: izraz EKV_T izraz
    7      | izraz KONJ_T izraz
    8      | izraz DISJ_T izraz
    9      | izraz IMPL_T izraz
   10      | '!' izraz
   11      | '(' izraz ')'
   12      | ID_T
   13      | LID_T '[' BROJ_T ']'
   14      | CONST_T
   15      | HEAD_T '(' lista ')'

   16 lista: '[' elementi ']'
   17      | LID_T
   18      | TAIL_T '(' lista ')'

   19 elementi: elementi ',' izraz
   20         | izraz


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 1 2
'!' (33) 10
'(' (40) 11 15 18
')' (41) 11 15 18
',' (44) 19
'[' (91) 13 16
']' (93) 13 16
error (256)
DODELA_T (258) 3 4
HEAD_T (259) 15
TAIL_T (260) 18
EKV_T (261) 6
KONJ_T (262) 7
DISJ_T (263) 8
IMPL_T (264) 9
ID_T (265) 3 12
LID_T (266) 4 13 17
CONST_T (267) 14
BROJ_T (268) 13


Nonterminals, with rules where they appear

$accept (21)
    on left: 0
program (22)
    on left: 1 2, on right: 0 1
naredba (23)
    on left: 3 4 5, on right: 1 2
izraz (24)
    on left: 6 7 8 9 10 11 12 13 14 15, on right: 3 5 6 7 8 9 10 11
    19 20
lista (25)
    on left: 16 17 18, on right: 4 15 18
elementi (26)
    on left: 19 20, on right: 16 19


State 0

    0 $accept: . program $end

    HEAD_T   shift, and go to state 1
    ID_T     shift, and go to state 2
    LID_T    shift, and go to state 3
    CONST_T  shift, and go to state 4
    '!'      shift, and go to state 5
    '('      shift, and go to state 6

    program  go to state 7
    naredba  go to state 8
    izraz    go to state 9


State 1

   15 izraz: HEAD_T . '(' lista ')'

    '('  shift, and go to state 10


State 2

    3 naredba: ID_T . DODELA_T izraz
   12 izraz: ID_T .

    DODELA_T  shift, and go to state 11

    $default  reduce using rule 12 (izraz)


State 3

    4 naredba: LID_T . DODELA_T lista
   13 izraz: LID_T . '[' BROJ_T ']'

    DODELA_T  shift, and go to state 12
    '['       shift, and go to state 13


State 4

   14 izraz: CONST_T .

    $default  reduce using rule 14 (izraz)


State 5

   10 izraz: '!' . izraz

    HEAD_T   shift, and go to state 1
    ID_T     shift, and go to state 14
    LID_T    shift, and go to state 15
    CONST_T  shift, and go to state 4
    '!'      shift, and go to state 5
    '('      shift, and go to state 6

    izraz  go to state 16


State 6

   11 izraz: '(' . izraz ')'

    HEAD_T   shift, and go to state 1
    ID_T     shift, and go to state 14
    LID_T    shift, and go to state 15
    CONST_T  shift, and go to state 4
    '!'      shift, and go to state 5
    '('      shift, and go to state 6

    izraz  go to state 17


State 7

    0 $accept: program . $end
    1 program: program . naredba '\n'

    $end     shift, and go to state 18
    HEAD_T   shift, and go to state 1
    ID_T     shift, and go to state 2
    LID_T    shift, and go to state 3
    CONST_T  shift, and go to state 4
    '!'      shift, and go to state 5
    '('      shift, and go to state 6

    naredba  go to state 19
    izraz    go to state 9


State 8

    2 program: naredba . '\n'

    '\n'  shift, and go to state 20


State 9

    5 naredba: izraz .
    6 izraz: izraz . EKV_T izraz
    7      | izraz . KONJ_T izraz
    8      | izraz . DISJ_T izraz
    9      | izraz . IMPL_T izraz

    EKV_T   shift, and go to state 21
    KONJ_T  shift, and go to state 22
    DISJ_T  shift, and go to state 23
    IMPL_T  shift, and go to state 24

    $default  reduce using rule 5 (naredba)


State 10

   15 izraz: HEAD_T '(' . lista ')'

    TAIL_T  shift, and go to state 25
    LID_T   shift, and go to state 26
    '['     shift, and go to state 27

    lista  go to state 28


State 11

    3 naredba: ID_T DODELA_T . izraz

    HEAD_T   shift, and go to state 1
    ID_T     shift, and go to state 14
    LID_T    shift, and go to state 15
    CONST_T  shift, and go to state 4
    '!'      shift, and go to state 5
    '('      shift, and go to state 6

    izraz  go to state 29


State 12

    4 naredba: LID_T DODELA_T . lista

    TAIL_T  shift, and go to state 25
    LID_T   shift, and go to state 26
    '['     shift, and go to state 27

    lista  go to state 30


State 13

   13 izraz: LID_T '[' . BROJ_T ']'

    BROJ_T  shift, and go to state 31


State 14

   12 izraz: ID_T .

    $default  reduce using rule 12 (izraz)


State 15

   13 izraz: LID_T . '[' BROJ_T ']'

    '['  shift, and go to state 13


State 16

    6 izraz: izraz . EKV_T izraz
    7      | izraz . KONJ_T izraz
    8      | izraz . DISJ_T izraz
    9      | izraz . IMPL_T izraz
   10      | '!' izraz .

    $default  reduce using rule 10 (izraz)


State 17

    6 izraz: izraz . EKV_T izraz
    7      | izraz . KONJ_T izraz
    8      | izraz . DISJ_T izraz
    9      | izraz . IMPL_T izraz
   11      | '(' izraz . ')'

    EKV_T   shift, and go to state 21
    KONJ_T  shift, and go to state 22
    DISJ_T  shift, and go to state 23
    IMPL_T  shift, and go to state 24
    ')'     shift, and go to state 32


State 18

    0 $accept: program $end .

    $default  accept


State 19

    1 program: program naredba . '\n'

    '\n'  shift, and go to state 33


State 20

    2 program: naredba '\n' .

    $default  reduce using rule 2 (program)


State 21

    6 izraz: izraz EKV_T . izraz

    HEAD_T   shift, and go to state 1
    ID_T     shift, and go to state 14
    LID_T    shift, and go to state 15
    CONST_T  shift, and go to state 4
    '!'      shift, and go to state 5
    '('      shift, and go to state 6

    izraz  go to state 34


State 22

    7 izraz: izraz KONJ_T . izraz

    HEAD_T   shift, and go to state 1
    ID_T     shift, and go to state 14
    LID_T    shift, and go to state 15
    CONST_T  shift, and go to state 4
    '!'      shift, and go to state 5
    '('      shift, and go to state 6

    izraz  go to state 35


State 23

    8 izraz: izraz DISJ_T . izraz

    HEAD_T   shift, and go to state 1
    ID_T     shift, and go to state 14
    LID_T    shift, and go to state 15
    CONST_T  shift, and go to state 4
    '!'      shift, and go to state 5
    '('      shift, and go to state 6

    izraz  go to state 36


State 24

    9 izraz: izraz IMPL_T . izraz

    HEAD_T   shift, and go to state 1
    ID_T     shift, and go to state 14
    LID_T    shift, and go to state 15
    CONST_T  shift, and go to state 4
    '!'      shift, and go to state 5
    '('      shift, and go to state 6

    izraz  go to state 37


State 25

   18 lista: TAIL_T . '(' lista ')'

    '('  shift, and go to state 38


State 26

   17 lista: LID_T .

    $default  reduce using rule 17 (lista)


State 27

   16 lista: '[' . elementi ']'

    HEAD_T   shift, and go to state 1
    ID_T     shift, and go to state 14
    LID_T    shift, and go to state 15
    CONST_T  shift, and go to state 4
    '!'      shift, and go to state 5
    '('      shift, and go to state 6

    izraz     go to state 39
    elementi  go to state 40


State 28

   15 izraz: HEAD_T '(' lista . ')'

    ')'  shift, and go to state 41


State 29

    3 naredba: ID_T DODELA_T izraz .
    6 izraz: izraz . EKV_T izraz
    7      | izraz . KONJ_T izraz
    8      | izraz . DISJ_T izraz
    9      | izraz . IMPL_T izraz

    EKV_T   shift, and go to state 21
    KONJ_T  shift, and go to state 22
    DISJ_T  shift, and go to state 23
    IMPL_T  shift, and go to state 24

    $default  reduce using rule 3 (naredba)


State 30

    4 naredba: LID_T DODELA_T lista .

    $default  reduce using rule 4 (naredba)


State 31

   13 izraz: LID_T '[' BROJ_T . ']'

    ']'  shift, and go to state 42


State 32

   11 izraz: '(' izraz ')' .

    $default  reduce using rule 11 (izraz)


State 33

    1 program: program naredba '\n' .

    $default  reduce using rule 1 (program)


State 34

    6 izraz: izraz . EKV_T izraz
    6      | izraz EKV_T izraz .
    7      | izraz . KONJ_T izraz
    8      | izraz . DISJ_T izraz
    9      | izraz . IMPL_T izraz

    $default  reduce using rule 6 (izraz)


State 35

    6 izraz: izraz . EKV_T izraz
    7      | izraz . KONJ_T izraz
    7      | izraz KONJ_T izraz .
    8      | izraz . DISJ_T izraz
    9      | izraz . IMPL_T izraz

    $default  reduce using rule 7 (izraz)


State 36

    6 izraz: izraz . EKV_T izraz
    7      | izraz . KONJ_T izraz
    8      | izraz . DISJ_T izraz
    8      | izraz DISJ_T izraz .
    9      | izraz . IMPL_T izraz

    $default  reduce using rule 8 (izraz)


State 37

    6 izraz: izraz . EKV_T izraz
    7      | izraz . KONJ_T izraz
    8      | izraz . DISJ_T izraz
    9      | izraz . IMPL_T izraz
    9      | izraz IMPL_T izraz .

    $default  reduce using rule 9 (izraz)


State 38

   18 lista: TAIL_T '(' . lista ')'

    TAIL_T  shift, and go to state 25
    LID_T   shift, and go to state 26
    '['     shift, and go to state 27

    lista  go to state 43


State 39

    6 izraz: izraz . EKV_T izraz
    7      | izraz . KONJ_T izraz
    8      | izraz . DISJ_T izraz
    9      | izraz . IMPL_T izraz
   20 elementi: izraz .

    EKV_T   shift, and go to state 21
    KONJ_T  shift, and go to state 22
    DISJ_T  shift, and go to state 23
    IMPL_T  shift, and go to state 24

    $default  reduce using rule 20 (elementi)


State 40

   16 lista: '[' elementi . ']'
   19 elementi: elementi . ',' izraz

    ']'  shift, and go to state 44
    ','  shift, and go to state 45


State 41

   15 izraz: HEAD_T '(' lista ')' .

    $default  reduce using rule 15 (izraz)


State 42

   13 izraz: LID_T '[' BROJ_T ']' .

    $default  reduce using rule 13 (izraz)


State 43

   18 lista: TAIL_T '(' lista . ')'

    ')'  shift, and go to state 46


State 44

   16 lista: '[' elementi ']' .

    $default  reduce using rule 16 (lista)


State 45

   19 elementi: elementi ',' . izraz

    HEAD_T   shift, and go to state 1
    ID_T     shift, and go to state 14
    LID_T    shift, and go to state 15
    CONST_T  shift, and go to state 4
    '!'      shift, and go to state 5
    '('      shift, and go to state 6

    izraz  go to state 47


State 46

   18 lista: TAIL_T '(' lista ')' .

    $default  reduce using rule 18 (lista)


State 47

    6 izraz: izraz . EKV_T izraz
    7      | izraz . KONJ_T izraz
    8      | izraz . DISJ_T izraz
    9      | izraz . IMPL_T izraz
   19 elementi: elementi ',' izraz .

    EKV_T   shift, and go to state 21
    KONJ_T  shift, and go to state 22
    DISJ_T  shift, and go to state 23
    IMPL_T  shift, and go to state 24

    $default  reduce using rule 19 (elementi)
